fix: исправлен z-index навигации

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,5 +1,7 @@
 .nav {
   position: sticky;
+  z-index: $z-index-header;
+
   top: 0;
 
   &__list {
@@ -18,6 +20,6 @@
   }
 
   &__icon {
-    
+
   }
 }
